@@ -1,0 +1,53 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net35</TargetFramework>
+		<Authors>Denis Zykov</Authors>
+		<Version>1.0.10</Version>
+		<PackageId>GameDevWare.TextTransform.Tool</PackageId>
+		<Description>Text to Text Transformation Templates (T4) transfomation tool.</Description>
+		<Company>GameDevWare</Company>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>../GameDevWare.TextTransform/sn.snk</AssemblyOriginatorKeyFile>
+		<DelaySign>false</DelaySign>
+		<Copyright>(c) Denis Zykov, GameDevWare 2019</Copyright>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<ApplicationIcon />
+		<OutputType>Exe</OutputType>
+		<StartupObject />
+		<AssemblyName>GameDevWare.TextTransform</AssemblyName>
+		<RootNamespace>GameDevWare.TextTransform</RootNamespace>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
+		<DefineConstants>$(DefineConstants);NET45</DefineConstants>
+	</PropertyGroup>
+	<ItemGroup>
+		<Compile Remove="Temp\**" />
+		<EmbeddedResource Remove="Temp\**" />
+		<None Remove="Temp\**" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ConsoleApp.CommandLine" Version="1.3.2" />
+		<PackageReference Include="ILRepack" Version="2.1.0-beta1" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Include="../GameDevWare.TextTransform/Processor/**/*.cs" Link="/Processor/%(Filename).cs" />
+	</ItemGroup>
+
+	<Target Name="Repack" AfterTargets="Build">
+		<GetFrameworkPath>
+			<Output TaskParameter="Path" PropertyName="FrameworkPath" />
+		</GetFrameworkPath>
+		<ItemGroup>
+			<NetPlatformFolders Include="$(NuGetPackageFolders.Split(';'))"></NetPlatformFolders>
+		</ItemGroup>
+		<PropertyGroup>
+			<ILRepack Condition="'$(ILRepack)' == ''">$(NuGetPackageRoot)ilrepack\2.1.0-beta1\tools\ILRepack.exe</ILRepack>
+			<IlRepackSignKey>$(AssemblyOriginatorKeyFile)</IlRepackSignKey>
+		</PropertyGroup>
+
+		<Exec Command="&quot;$(ILRepack)&quot; /target:exe &quot;/targetplatform:v4,$(FrameworkPath)&quot; &quot;/keyfile:$(IlRepackSignKey)&quot; /internalize /xmldocs /union /parallel &quot;/out:$(TargetPath)&quot; &quot;$(TargetPath)&quot; &quot;$(TargetDir)ConsoleApp.CommandLine.dll&quot;" WorkingDirectory="$(ProjectDir)" />
+		<Delete Files="$(TargetDir)ConsoleApp.CommandLine.dll" />
+	</Target>
+</Project>
